<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_ask_login"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/titre_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2196F3"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifier Profile"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:orientation="vertical"
            android:padding="8dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/img_profil"
                android:layout_width="127dp"
                android:layout_height="117dp"
                android:layout_gravity="center"
                android:onClick="openGalleryProfil"
                fresco:actualImageScaleType="fitXY"
                fresco:roundedCornerRadius="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:theme="@style/TextInputLayoutStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_prenom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@android:color/darker_gray"
                    android:theme="@style/TextInputLayoutStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prenom"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_tel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                android:theme="@style/TextInputLayoutStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/t_l"
                    android:inputType="phone"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                app:passwordToggleTint="@android:color/darker_gray"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <Button
                    android:id="@+id/negative_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/annuler"
                    android:onClick="annulerDialog"
                    android:textAllCaps="false"
                    android:textColor="#0788F5"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/positive_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifer"
                    android:onClick="updateProfile"
                    android:textAllCaps="false"
                    android:textColor="#0788F5"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</LinearLayout>